Entry renamed to Structure
